feat: Add enterprise LLM providers and enhance   provider management
  - Add Azure OpenAI, AWS Bedrock, and Google
  Vertex AI provider implementations
  - Implement comprehensive authentication options
  (API keys, IAM, Azure AD, service accounts)
  - Add abort signal support for stopping LLM
  responses across all providers
  - Enhance WebLLM with better model selection and
  progress tracking
  - Update provider comparison table with logical
  grouping and visual hierarchy
  - Fix React hydration errors by removing explicit
   React imports (new JSX transform)
  - Unify provider configuration UI between chat
  interface and setup page
  - Add i18n support for provider configuration and
   WebLLM models
  - Improve provider registry with enterprise
  provider metadata and validation

  Providers now support:
  - AWS Bedrock: API key + IAM credentials
  - Azure OpenAI: API key + Azure AD auth
  - Google Vertex AI: API key + service account
  - Ollama: Optional bearer token auth
  - Stop button functionality via AbortController

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -351,7 +351,20 @@
         "multilingual": "Good multilingual performance",
         "versatile": "Powerful and versatile for legal analysis",
         "light": "Lightweight and efficient"
-      }
+      },
+      "cached": "Cached",
+      "modelCached": "Model stored locally",
+      "removeFromCache": "Remove from cache",
+      "confirmRemove": "Remove {{name}} from cache?",
+      "confirmRemoveMessage": "This will free up {{size}} of space. The model will be downloaded again next time you use it.",
+      "removeConfirm": "Remove",
+      "removeCancel": "Cancel",
+      "cacheRemoved": "Cache removed successfully",
+      "downloadingModel": "Downloading AI model",
+      "firstTimeDownload": "First time using this model. It will be stored locally.",
+      "modelLoaded": "Model loaded ✓",
+      "preloadModel": "Preload model",
+      "downloadProgress": "Download progress"
     },
     "otherProviders": "Other Providers"
   },
