chore: upgrade GitHub Actions and ESLint dependencies
  - Update actions/upload-artifact from v3 to v4 across all workflows
  - Migrate from ESLint v8 to v9 with new flat config format
  - Update TypeScript ESLint packages to v8
  - Add astro-eslint-parser for better Astro file support
  - Fix quality workflow script syntax for ES modules
  - Update test screenshots with new captures

--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1091,6 +1091,8 @@
     "title": "Códigos Legales Mexicanos",
     "subtitle": "Accede al corpus completo de la legislación mexicana actualizada.",
     "article": "Artículo",
+    "area": "Área legal",
+    "hierarchy": "Jerarquía",
     "disclaimer": "Aviso Legal: LexMX proporciona información legal general con fines educativos. No constituye asesoría legal profesional. Siempre consulte con un abogado certificado para casos específicos.",
     "terms": "Al usar este servicio, aceptas nuestros términos y condiciones.",
     "copyright": "© 2024 LexMX. Código abierto bajo licencia MIT.",
