--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1091,6 +1091,8 @@
     "title": "Mexican Legal Codes",
     "subtitle": "Access the complete corpus of updated Mexican legislation.",
     "article": "Article",
+    "area": "Legal area",
+    "hierarchy": "Hierarchy",
     "disclaimer": "Legal Notice: LexMX provides general legal information for educational purposes. It does not constitute professional legal advice. Always consult with a certified lawyer for specific cases.",
     "terms": "By using this service, you accept our terms and conditions.",
     "copyright": "© 2024 LexMX. Open source under MIT license.",
